[metadata]
name = telebot_mem
version = 1.0
author = Wei Li
author_email = weilinear@gmail.com
description = Extend telebot to save and retrieve search histories from a database
long_description = file: README.md
long_description_content_type = text/markdown
url = weilinear.github.io/telebot_mem
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
where = src
include = telebot_mem